@@ -4,32 +4,35 @@
 
 EAPI=2
 
-inherit autotools qt4 subversion
+inherit autotools qt4
 
 DESCRIPTION="Qt based client for DirectConnect, fork of Valknut"
 HOMEPAGE="https://sourceforge.net/projects/eiskaltdc/"
-SRC_URI=""
-KEYWORDS=""
-ESVN_REPO_URI="https://${PN}.svn.sourceforge.net/svnroot/${PN}/trunk"
+SRC_URI="mirror://sourceforge/${PN}/${P}.tar.bz2"
+KEYWORDS="~amd64 ~x86"
 
 LICENSE="GPL-3"
 SLOT="0"
-IUSE=""
+IUSE="debug"
 
 RDEPEND="|| ( x11-libs/qt-gui:4 =x11-libs/qt-4.3*:4 )
 	>=dev-libs/libxml2-2.4.22
-	>=net-p2p/dclib-0.3.23
+	>=net-p2p/dclib-0.3.23[ssl]
 	dev-libs/openssl"
 DEPEND="${RDEPEND}
 	dev-util/pkgconfig"
 
-src_unpack() {
-		subversion_src_unpack
-}
 src_prepare() {
 		eautoreconf
 }
 
+src_configure() {
+	local myconf=""
+	use debug && myconf="--enable-warning --enable-debug "
+	use !debug $$ myconf="--disable-debug"
+
+	econf $myconf || die "econf failed"
+}
 src_install() {
 	einstall || die "einstall failed"
 	dodoc AUTHORS ChangeLog README NEWS TODO
