@@ -2,7 +2,13 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
-  20 Sep 2009; A. Vinogradov <spamslepnoga@inbox.ru> eiskaltdc-1.0.0.ebuild,
+  20 Sep 2009; A. Vinogradov <spamslepnoga@inbox.ru>
+  +eiskaltdc-1.0.2.ebuild, eiskaltdc-9999.ebuild:
+  add new version
+  20 Sep 2009; A. Vinogradov <spamslepnoga@inbox.ru> -eiskaltdc-1.0.0.ebuild:
+  delete old version
+
+  20 Sep 2009; A. Vinogradov <spamslepnoga@inbox.ru> 
   eiskaltdc-9999.ebuild:
   clean ebuild code
 
